[workspace]
members = [
    "contracts/cosmwasm-vm/*",
    "libraries/rust/common",
]

exclude = ["contracts/cosmwasm-vm/archway"]


[workspace.package]
authors = ["Icon Foundation<foo@icon.foundation>"]
repository = "https://github.com/icon-project/ibc-integration.git"
version="0.1.0"

[workspace.dependencies]
cosmwasm-schema = {version="1.4.0",default-features = false}
cosmwasm-std = {version="1.4.0",default-features = false,features = ["ibc3"]}
schemars = {version="0.8.10",default-features = false}
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
cw-storage-plus = {git="https://github.com/icon-project/cw-storage-plus.git", branch="fix-raw"}

cw-xcall-lib={package="cw-xcall-lib", git="https://github.com/icon-project/xCall.git", branch="fix/cosmwasm-1.3",default-features = false}
cw-xcall = {package="cw-xcall", git="https://github.com/icon-project/xCall.git", branch="fix/cosmwasm-1.3",default-features = false}
cw-mock-dapp = { git="https://github.com/icon-project/xCall.git", branch="fix/cosmwasm-1.3" ,default-features = false}
cw-mock-dapp-multi = { git="https://github.com/icon-project/xCall.git", branch="fix/cosmwasm-1.3",default-features = false }
cw2 = {version="1.0.1",default-features = false}

common = { path="./libraries/rust/common" }
cw-common = { path="./contracts/cosmwasm-vm/cw-common" }

ibc-proto = { version = "0.26.0", default-features = false}

prost = { version = "0.11.8", default-features = false,features=["prost-derive"]}

serde-json-wasm = {version="0.5.0", default-features = false}
serde_json = "1.0.96"
#serde = { version = "1.0.154", default-features = false, features = ["derive"] }

bytes = { version = "1.4.0", default-features = false }
#thiserror = { version = "1.0.39" }
hex ={ version = "0.4.3", default-features = false }
hex-literal={version ="*"}
debug_print = "1.0.0"

[profile.release]
opt-level = 'z'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
