[workspace]
members = [
    "contracts/cosmwasm-vm/*",

]

[workspace.package]
authors = ["Icon Foundation<foo@icon.foundation>"]
repository = "https://github.com/icon-project/ibc-integration.git"
version="0.2.0"

[workspace.dependencies]
cosmwasm-std = {version="1.2.2",default-features = false}
cw-storage-plus = {git="https://github.com/icon-project/cw-storage-plus.git", branch="fix-raw"}
cosmwasm-schema = {version="1.2.2",default-features = false}
common = { git = "https://github.com/icon-project/IBC-Integration.git",branch="feat/cw-wasm-light-client" ,default-features = false}
schemars = {version="0.8.12",default-features = false}
cw2 = {version="1.0.1",default-features = false}

prost = { version = "0.11.8", default-features = false,features=["prost-derive"]}

serde-json-wasm = {version="0.5.0", default-features = false}
serde_json = "1.0.96"
serde = { version = "1.0.154", default-features = false, features = ["derive"] }

bytes = { version = "1.4.0", default-features = false }
thiserror = { version = "1.0.39" }
hex ={ version = "0.4.3", default-features = false }
debug_print = "1.0.0"



[profile.release]
opt-level = 'z'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
