[workspace]
members = [
    "contracts/cosmwasm-vm/*",
    "libraries/rust/common",
]

exclude = ["contracts/cosmwasm-vm/archway"]


[workspace.package]
authors = ["Icon Foundation<foo@icon.foundation>"]
repository = "https://github.com/icon-project/ibc-integration.git"
version="0.1.2"

[workspace.dependencies]
cosmwasm-std = {version="1.5.5",default-features = false,features = ["iterator", "ibc3","staking"]}
cosmwasm-storage = "1.2.2"
cosmwasm-schema = "1.2.2"
schemars = "0.8.12"
cw-storage-plus = {git="https://github.com/icon-project/cw-storage-plus.git", branch="fix-raw"}
cw-xcall-lib={package="cw-xcall-lib", git="https://github.com/icon-project/xCall.git", tag="v0.1.0-alpha.5"}
cw-xcall = {package="cw-xcall", git="https://github.com/icon-project/xCall.git", tag="v0.1.0-alpha.5"}
cw-mock-dapp = { git="https://github.com/icon-project/xCall.git",  tag="v0.1.0-alpha.5" }
cw-mock-dapp-multi = { git="https://github.com/icon-project/xCall.git",  tag="v0.1.0-alpha.5" }
cw2 = "1.0.1"

ibc-proto = { version = "0.26.0", default-features = false}
prost = { version = "0.11.8", default-features = false,features=["prost-derive"]}

serde-json-wasm = {version="0.5.0", default-features = false}
serde_json = "1.0.96"
serde = { version = "1.0.154", default-features = false, features = ["derive"] }

bytes = { version = "1.4.0", default-features = false }
thiserror = { version = "1.0.39" }
hex ={ version = "0.4.3", default-features = false }
debug_print = "1.0.0"

[profile.release]
opt-level = 'z'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
