[package]
name = "cw-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.2.1"
cosmwasm-std = {workspace=true, features=["ibc3"]}
serde = { version = "1.0.154", default-features = false, features = ["derive"] }
cw-storage-plus = {workspace=true}
serde_json = "*"
hex-buffer-serde = "0.4.0"
schemars = "0.8.12"
hex = { version = "0.4.3", default-features = false}
common = { path="../../../libraries/rust/common" }
#ibc = { version = "0.32.0", default-features = false}
ibc-proto = { workspace=true}
prost = { workspace=true}
serde-json-wasm = {workspace=true}
bytes = { workspace=true }

[dev-dependencies]
getrandom = {version = "0.2.9", default-features = false, features = ["custom"]}
test-utils={path="../../../libraries/rust/test-utils"}

[profile.release]
# Do not perform backtrace for panic on release builds.
panic = 'abort'
# Perform optimizations on all codegen units.
codegen-units = 1
# Optimize for size.
opt-level = 'z' # or 'z' to optimize "aggressively" for size
# Enable link time optimization.
lto = true
strip = true

