[package]
name = "cw-common"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = {workspace=true}
cosmwasm-std = {workspace=true}
serde = { workspace=true}
cw-storage-plus = {workspace=true}
serde_json = {workspace=true}
hex-buffer-serde = "0.4.0"
schemars = {workspace=true}
hex = { workspace=true}
common = { path="../../../libraries/rust/common" }
ibc-proto = { workspace=true}
prost = { workspace=true}
serde-json-wasm = {workspace=true}
bytes = { workspace=true }
bech32="0.9.1"
cw-xcall-lib={workspace=true}
debug_print={wokspace=true}

[dev-dependencies]
getrandom = {version = "0.2.9", default-features = false, features = ["custom"]}
test-utils={path="../../../libraries/rust/test-utils"}

[profile.release]
# Do not perform backtrace for panic on release builds.
panic = 'abort'
# Perform optimizations on all codegen units.
codegen-units = 1
# Optimize for size.
opt-level = 'z' # or 'z' to optimize "aggressively" for size
# Enable link time optimization.
lto = true
strip = true

