[package]
name = "cw-ibc-core"
version = "0.1.0"
edition = "2021"
authors = {workspace = true}


exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.10
"""

[dependencies]
cosmwasm-schema = "1.2.2"
cosmwasm-std = "1.2.2"
cosmwasm-storage = "1.2.2"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
schemars = "0.8.12"
serde = { version = "1.0.154", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.39" }
ibc = { version = "0.32.0", default-features = false, features = ["parity-scale-codec", "mocks-no-std", "serde", "borsh"]}
ibc-proto = { version = "0.26.0", default-features = false, features = ["parity-scale-codec", "borsh"] }
subtle-encoding = { version = "0.5", default-features = false }


[dev-dependencies]
cw-multi-test = "0.16.2"
getrandom = {version = "0.2", default-features = false, features = ["custom"]}
