[package]
name = "cw-ibc-core"
version = "0.1.0"
edition = "2021"


exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.10
"""

[dependencies]
cosmwasm-schema = "1.2.2"
cosmwasm-std = {version="1.2.2",default-features = false}
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
schemars = "0.8.12"
serde = { version = "1.0.154", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.39" }
#ibc = { version = "0.32.0", default-features = false}
#ibc-proto = { version = "0.26.0", default-features = false}
sha2 = { version = "0.10.6", default-features = false }
hex ={ version = "0.4.3", default-features = false }
sha3 = { version = "0.10.6", default-features = false }
bytes = { version = "1.4.0", default-features = false }
common = { path="../../../libraries/rust/common", default-features = false }
cw-common = { path="../cw-common",default-features = false }
prost = { version = "0.11.8", default-features = false,features=["prost-derive"]}
serde-json-wasm = {version="0.5.0", default-features = false}
debug_print = "1.0.0"


[dev-dependencies]
getrandom = {version = "0.2", default-features = false, features = ["custom"]}
cw-multi-test = "0.16.4"
cw-icon-light-client = { path="../cw-icon-light-client",default-features = false }
anyhow="*"
test-utils={path="../../../libraries/rust/test-utils"}
hex-literal="*"
#ibc-mock = { package="ibc", version = "0.31.0" ,features=["mocks"]}

[profile.release]
# Do not perform backtrace for panic on release builds.
panic = 'abort'
# Perform optimizations on all codegen units.
codegen-units = 1
# Optimize for size.
opt-level = 'z' # or 'z' to optimize "aggressively" for size
# Enable link time optimization.
lto = true
strip = true