[package]
name = "cw-ibc-core"
version.workspace = true
authors.workspace = true
edition = "2021"


exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.10
"""

[dependencies]
cosmwasm-schema = {workspace=true}
cosmwasm-std = {workspace=true}
cw-storage-plus = {workspace=true}
cw2 = {workspace=true}
schemars = {workspace=true}
serde = { workspace=true }
thiserror = { workspace=true}
sha2 = { version = "0.10.6", default-features = false }
hex ={workspace=true }
sha3 = { version = "0.10.6", default-features = false }
bytes = { workspace=true }
common = { workspace=true, default-features = false }
cw-common = { workspace=true,default-features = false }
prost = { workspace=true}
serde-json-wasm = {workspace=true}
debug_print = {workspace=true}


[dev-dependencies]
getrandom = {version = "0.2", default-features = false, features = ["custom"]}
cw-multi-test = "0.15.1"
cw-icon-light-client = { path="../cw-icon-light-client",default-features = false }
anyhow="1.0.71"
test-utils={path="../../../libraries/rust/test-utils"}
hex-literal="*"
#ibc-mock = { package="ibc", version = "0.31.0" ,features=["mocks"]}

[profile.release]
# Do not perform backtrace for panic on release builds.
panic = 'abort'
# Perform optimizations on all codegen units.
codegen-units = 1
# Optimize for size.
opt-level = 'z' # or 'z' to optimize "aggressively" for size
# Enable link time optimization.
lto = true
strip = true