[package]
name = "cw-icon-light-client"
version = "0.1.0"
edition = "2021"
authors = {workspace = true}

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.10
"""

[dependencies]
cosmwasm-schema = "1.2.1"
cosmwasm-std = { version = "1.2.1", features = ["iterator", "ibc3"] }
cosmwasm-storage = "1.2.1"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
schemars = "0.8.10"
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.38" }
ibc-proto={version="0.28.0", default-features = false}
prost = { version = "0.11.8", default-features = false, features = ["prost-derive"] }
prost-types = { version = "0.11.8", default-features = false }
hex="*"
bytes="*"
common={path="../../../libraries/rust/common"}


[dev-dependencies]
cosmwasm = "0.7.2"
cw-multi-test = "0.16.2"
