[package]
name = "cw-integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-schema = {workspace=true}
cosmwasm-std = {workspace=true}
cosmwasm-storage = {workspace=true}
cw-storage-plus = {workspace=true}
cw-common={path="../cw-common"}
common = { path="../../../libraries/rust/common", default-features = false }
ibc = { version = "0.32.0", default-features = false, features = ["parity-scale-codec", "mocks-no-std", "serde"]}
prost = { workspace=true}
strum="*"
strum_macros = "0.24"

[dev-dependencies]
hex = "0.4.3"
cw-multi-test = "0.16.4"
cw-xcall-ibc-connection = { path="../cw-xcall-ibc-connection" }
cw-mock-ibc-core = { path="../cw-mock-ibc-core" }
cw-mock-dapp = { workspace=true}
cw-mock-dapp-multi = { workspace=true }
cw-icon-light-client = { path="../cw-icon-light-client" }
cw-ibc-core={path="../cw-ibc-core"}
cw-xcall-lib={workspace=true}
cw-xcall = {workspace=true}
#cw-xcall={path="../cw-xcall"}
anyhow="*"
test-utils={path="../../../libraries/rust/test-utils"}

