[package]
name = "cw-wasm-light-client"
version = "0.1.0"
authors.workspace = true
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
mock=[]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.10
"""

[dependencies]
cosmwasm-schema = {workspace=true}
cosmwasm-std = {workspace=true}
cosmwasm-storage = {workspace=true}
cw-storage-plus = {workspace=true}
cw2 = {workspace=true}
schemars = {workspace=true}
serde = { workspace=true}
thiserror = { workspace=true}
sha2 = { version = "0.10.6", default-features = false }
hex ={workspace=true }
sha3 = { version = "0.10.6", default-features = false }
bytes = { workspace=true }
common = { path="../../../libraries/rust/common", default-features = false }
cw-light-client-common = { path="../cw-light-client-common",default-features = false }
cw-common = { path="../cw-common",default-features = false }
prost = { workspace=true}
serde-json-wasm = {workspace=true}
debug_print = {workspace=true}
base64 = { version = "0.13", default-features = false, features = ["alloc"] }
ics08-wasm={ git="https://github.com/ComposableFi/composable-ibc.git",default-features = false, features=["cosmwasm"],branch="master"}

[dev-dependencies]
cosmwasm = "0.7.2"
hex-literal="*"
test-utils={path="../../../libraries/rust/test-utils"}
getrandom = {version = "0.2", default-features = false, features = ["custom"]}

[profile.release]
# Do not perform backtrace for panic on release builds.
panic = 'abort'
# Perform optimizations on all codegen units.
codegen-units = 1
# Optimize for size.
opt-level = 'z' # or 'z' to optimize "aggressively" for size
# Enable link time optimization.
lto = true
