[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.4.0", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
rlp-derive = { version = "0.1.0", default-features = false }
prost = { version = "0.11.8", default-features = false, features = ["prost-derive"] }
prost-types = { version = "0.11.8", default-features = false }
pbjson-types = { version = "0.5.1", default-features = false }
serde = { version = "1.0.156", default-features = false,features = ["derive"] }
serde_json = "1.0"
pbjson = { version = "0.5.1", default-features = false }
ibc-proto = { version = "0.28.0", default-features = false }
keccak-hash="0.10.0"
hex-literal="0.3.4"
cosmwasm-schema = "1.2.1"
sha2 = { version = "0.10.6", default-features = false }
hex ={ version = "0.4.3", default-features = false }
sha3 = { version = "0.10.6", default-features = false }

[dev-dependencies]
test-utils={path="../test-utils"}