[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace=true }
rustc-hex = { version = "2.1.0", default-features = false }
rlp-derive = { version = "0.1.0", default-features = false }
prost = { workspace=true}
prost-types = { version = "0.11.8", default-features = false }
pbjson-types = { version = "0.5.1", default-features = false }
serde = { workspace=true}
serde_json = {workspace=true}
pbjson = { version = "0.5.1", default-features = false }
ibc-proto = { workspace=true}
hex-literal="0.3.4"
cosmwasm-schema = {workspace=true}
sha2 = { version = "0.10.6", default-features = false }
hex ={workspace=true }
sha3 = { version = "0.10.6", default-features = false }
serde-json-wasm = {workspace=true}
cw-storage-plus = {workspace=true}
cosmwasm-std = {workspace=true}
dyn-clone = "1.0.11"
displaydoc="0.2.4"
derive_more = { version = "0.99.17", default-features = false, features = ["from", "into", "display"] }
time = { version = ">=0.3.0, <0.3.21", default-features = false }
ics23 = { version = "0.9.0", default-features = false, features = ["host-functions"] }
safe-regex = { version = "0.2.5", default-features = false }
subtle-encoding = { version = "0.5", default-features = false }
debug_print= {workspace =true}
[dependencies.tendermint]
version = "0.29"
default-features = false

[dev-dependencies]
test-utils={path="../test-utils"}
test-log = { version = "0.2.10", features = ["trace"] }
tracing-subscriber = { version = "0.3.14", features = ["fmt", "env-filter", "json"]}

[profile.release]
# Do not perform backtrace for panic on release builds.
panic = 'abort'
# Perform optimizations on all codegen units.
codegen-units = 1
# Optimize for size.
opt-level = 'z' # or 'z' to optimize "aggressively" for size
# Enable link time optimization.
lto = true
strip = true