[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.156", default-features = false,features = ["derive"] }
serde_json = "1.0"
cosmwasm-std = {version="1.2.2", default-features = false, features = ["iterator", "ibc3"]}
prost = { version = "0.11.8", default-features = false, features = ["prost-derive"] }
ibc-proto = { version = "0.28.0", default-features = false, features = ["parity-scale-codec", "borsh"] }
#ibc = { version = "0.32.0", default-features = false, features = ["parity-scale-codec", "mocks-no-std", "serde", "borsh"]}
hex="*"
hex-literal="*"
common={path="../common"}
cw-multi-test = "0.16.4"

[dev-dependencies]

getrandom = {version = "0.2", default-features = false, features = ["custom"]}
