[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace=true}
serde_json = {workspace=true}
cosmwasm-std = {workspace=true}
prost = { workspace=true}
ibc-proto = { workspace=true}
hex={workspace=true}
hex-literal={workspace=true}
common={workspace=true}


[dev-dependencies]
cw-multi-test = "0.15.1"
getrandom = {version = "0.2", default-features = false, features = ["custom"]}
